fix(footer): increased gap in nav items

--- a/front/src/components/Footer/footerStyles.scss
+++ b/front/src/components/Footer/footerStyles.scss
@@ -16,7 +16,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: .2rem;
+      gap: .4rem;
       padding: .5rem .75rem .7rem;
       position: relative;
       min-width: 78px;
